# zarrduck

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  404.html  AGENTS.md  AGENTS.override.md  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  add_plan_vtab.py  analysis.duckdb  architecture.html  cli.html  development.html  exporting.html  find_longest.py  fix.py  heatmap.tape  histogram.tape  how_to.html  index.html  install.sh  installation.html  introduction.html  lineplot.tape  metrics.html  monthly.duckdb  patch_tests.py  print.html  refactor_search.py  rename.py  rename_zarrduck.py  replace_script.py  replace_script_tests.py  replace_string_block.py  requirements.txt  searcher-09f2665d.js  searcher-c2a407aa.js  searchindex-311f533a.js  (+26 more)
.agents/rules/: agent-rules.md
.agents/skills/: graphify.skill  receiving-code-review.skill  roborev-integration.skill  using-git-worktrees.skill
.claude/skills/: finishing-a-development-branch.skill  test-driven-development.skill  ubiquitous-language.skill
.cursor/rules/: agent-rules.mdc
.devcontainer/: devcontainer.json
.githooks/: post-commit  post-rewrite  pre-push
.github/workflows/: deploy-docs.yml  docs.yaml  pull_request.yaml  release.yaml
assets/css/: styles.3dec3806.css  styles.eaddd906.css
assets/js/: 0fe61dd4.70f42305.js  1301.5adea7a1.js  1301.810bbb31.js  1301.918ad975.js  1513.91b94b09.js  1513.c05f91b0.js  165.760efb5d.js  17546b66.ffb4a85a.js  17896441.076ee298.js  17896441.98dcbf7c.js  1795.214ed49f.js  1795.73db939a.js  1844.14f3b4f4.js  1844.acc6a396.js  18a0833e.8b567cf1.js  1df93b7f.1c420e04.js  1df93b7f.3d251416.js  1f391b9e.0054c7b9.js  1fcacf42.2d2c0ea6.js  1fcacf42.490ccd01.js  2014.855e6482.js  2130.2b3e01ea.js  2237.1f8cc0f3.js  2438.8e001b35.js  253.d8a7577a.js  253.f05a82bc.js  2555.48523634.js  2665.1b2d1a5c.js  2665.cc411269.js  3049.32e42aac.js  3088.65a2e51a.js  3088.d02abba4.js  3436.48353ac4.js  3593.b1cbfd49.js  3674.24b3e5ed.js  3723.a7b8ce22.js  384.203b4b71.js  384.5dfc0438.js  3872.a13b9aba.js  3923.25c7b3e2.js  (+167 more)
cli/: Cargo.toml  build.rs
cli/src/: config.rs  duckdb_utils.rs  export_engine.rs  main.rs  plot.rs  stac.rs  ui.rs  zarr_util.rs
cli/src/commands/: export_cmd.rs  extract.rs  info.rs  ingest.rs  mod.rs  resample.rs  search.rs  shell.rs
cli/src/export/: metadata.rs  mod.rs  schema.rs  stream.rs
cli/tests/: cli_global_test.rs  export_test.rs  extract_multipolygon_test.rs  extract_test.rs  harness_smoke_test.rs  info_test.rs  ingest_export_test.rs  integration_test.rs  interactive_test.rs  plot_test.rs  resample_test.rs  search_test.rs  snapshot_test.rs
cli/tests/common/: mod.rs
cli/tests/fixtures/: ingest_input.csv  ingest_input.geojson  polygon.geojson
cli/tests/snapshots/: plot_test__plot_heatmap_snapshot.snap  plot_test__plot_hist_snapshot.snap  plot_test__plot_line_snapshot.snap  snapshot_test__cli_help_snapshot.snap  snapshot_test__cli_help_snapshot.snap.new  snapshot_test__extract_help_snapshot.snap  snapshot_test__resample_help_snapshot.snap
climate_data.zarr/: .zattrs  .zmetadata
climate_data.zarr/air_temperature/: .zarray  .zattrs  0.0.0  1.0.0  10.0.0  11.0.0  12.0.0  13.0.0  14.0.0  15.0.0  16.0.0  17.0.0  18.0.0  19.0.0  2.0.0  20.0.0  21.0.0  22.0.0  23.0.0  24.0.0  25.0.0  26.0.0  27.0.0  28.0.0  29.0.0  3.0.0  30.0.0  31.0.0  32.0.0  33.0.0  34.0.0  35.0.0  36.0.0  37.0.0  38.0.0  39.0.0  4.0.0  40.0.0  41.0.0  42.0.0  (+41 more)
climate_data.zarr/lat/: .zarray  .zattrs  0
climate_data.zarr/lon/: .zarray  .zattrs  0
climate_data.zarr/time/: .zarray  .zattrs  0
docs/: book.toml  docusaurus.config.ts  sidebars.ts
docs/adr/: 0001-unified-read-geo-table-function.md
docs/src/: SUMMARY.md  architecture.md  cli.md  development.md  exporting.md  (+5 more)
docs_new/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
e2e/: Dockerfile.builder  Dockerfile.duckdb  Dockerfile.generator  docker-compose.yml  generate_zarr.py
eider_session/: Cargo.toml  build.rs
extension/: Cargo.toml  build.rs
extension/.tmpTYqGbd/test_plan.zarr/: zarr.json
extension/.tmpusVSaT/test_plan_bbox.zarr/: zarr.json
extension/.tmpusVSaT/test_plan_bbox.zarr/lat/: zarr.json
extension/benches/: coordinate_bench.rs
extension/src/: http_store.rs  lib.rs  metadata.rs  metadata_vtab.rs  table_function.rs  vector_writer.rs
extension/tests/: test_cog_eval.rs  test_extension.rs  test_plan.rs  test_plan.rs.orig  test_stac_eval.rs
geozarr_core/: Cargo.toml
geozarr_core/benches/: scanner_bench.rs
geozarr_core/candidates/: mcts_state_scanner.json
geozarr_core/src/: cog.rs  coordinate_resolver.rs  coordinates.rs  dataset.rs  datetime.rs  feature_collection.rs  geo_dataset.rs  lib.rs  metadata.rs  query_planner.rs  scanner.rs  scanner.rs.bak  store.rs  types.rs  validator.rs  virtual_stac_store.rs  virtual_stac_time_stack.rs  virtual_store.rs
geozarr_core/tests/: cog_e2e.rs  remote_partial_read.rs  stac_e2e.rs  stac_store.rs  stac_timestack_e2e.rs  stac_timestack_store.rs  test_stac_fallback.rs
geozarr_core/tests/fixtures/: cog_int16_alt.tif  cog_int16_deflate.tif  cog_int16_uncompressed.tif  stac_item.json  stac_itemcollection.json  stac_itemcollection_empty.json  stac_itemcollection_nodatetime.json
graphify-out/: .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
markdown-page/: index.html
mcp/: Cargo.toml  build.rs
mcp/src/: guard.rs  lib.rs  main.rs  result.rs  server.rs  tools.rs
mcp/tests/: e2e.rs  protocol.rs
scripts/: bench_polygons.sql  bench_remote_partialread.py  bench_requirements.txt  bench_stac_pushdown.py  bench_zonal_headtohead.py  demo.tape  demo_extension.tape  demo_polygons.geojson  demo_region.geojson  era_evaluation_loop.py  extract_best.py  generate_cog_fixture.py  generate_demo_data.py  header.sh  mock_stac.py  patch_duckdb_rs_windows.py  puct_orchestrator.py  puct_orchestrator_scanner.py  run_e2e.sh  setup_hooks.sh
src/: lib.rs  table_function.rs
tests/: test_extension.rs
tests_bench/: test_assert_agree.py  test_correctness.py  test_generate.py  test_remote_gen.py  test_remote_runners.py  test_runners.py
(+211 files in other folders)
