[package]
name = "duckdb_geozarr"
version = "0.1.0"
edition = "2021"

[lib]
name = "geozarr"
crate-type = ["cdylib", "rlib"]

[features]
default = []
loadable-extension = ["duckdb/loadable-extension", "duckdb/vtab-loadable"]

[dependencies]
bytemuck = "1.19.0"
duckdb = { version = "1.1.1", features = ["bundled", "vtab", "buildtime_bindgen"] }
serde_json = "1.0"
zarrs = "0.16.4"

[dev-dependencies]
duckdb = { version = "1.1.1", features = ["bundled", "vtab", "buildtime_bindgen"] }
tempfile = "3.10"
