[package]
name = "zarrduck"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
duckdb = { version = "1.10502.0", features = ["bundled"] }
tokio = { version = "1.0", features = ["full"] }
opendal = { version = "0.48", features = ["services-s3", "services-http", "services-fs"] }
zarrs = { version = "0.16.4", features = ["opendal", "async"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
color-eyre = "0.6"
indicatif = "0.17"
inquire = "0.7"
figment = { version = "0.10", features = ["toml", "env"] }
directories = "5.0"
reqwest = { version = "0.12", features = ["json"] }
rasciigraph = "0.3.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
serial_test = "3.4.0"
tempfile = "3.10"
