[package]
name = "duckdb_geozarr"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "geozarr"
crate-type = ["cdylib", "rlib"]

[features]
default = []
loadable-extension = ["duckdb/loadable-extension", "duckdb/vtab-loadable"]

[dependencies]
bytemuck = "1.19.0"
duckdb = { version = "1.10502.0", features = ["bundled", "vtab", "buildtime_bindgen"] }
opendal = { version = "0.48", features = ["services-s3", "services-http"] }
serde_json = "1.0"
zarrs = { version = "0.16.4", features = ["opendal", "async"] }

[dev-dependencies]
duckdb = { version = "1.10502.0", features = ["bundled", "vtab", "buildtime_bindgen"] }
tempfile = "3.10"
