[package]
name = "eider_extension"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "eider"
crate-type = ["cdylib", "rlib"]

[features]
default = ["bundled"]
# Statically link libduckdb — required for normal (non-loadable) builds, the
# extension's own tests, and benches.
bundled = ["duckdb/bundled", "duckdb/buildtime_bindgen"]
# Build as a loadable DuckDB extension. Build with
# `--no-default-features --features loadable-extension` so `bundled` is omitted:
# a loadable C-API extension must use the host DuckDB's API table rather than a
# second, statically-linked (and uninitialised) copy.
loadable-extension = ["duckdb/loadable-extension", "duckdb/vtab-loadable"]
# Loadable build that regenerates DuckDB bindings for the target platform via
# bindgen (the pre-generated loadable bindings mismatch Windows MSVC's type
# layout -> E0308). Build with:
#   BINDGEN_EXTRA_CLANG_ARGS="-I<repo>/extension/vendor" \
#     cargo duckdb-ext build --no-default-features --features loadable-bindgen
# so clang resolves the vendored duckdb/duckdb_extension.h header.
loadable-bindgen = ["loadable-extension", "duckdb/buildtime_bindgen"]

[dependencies]
geozarr_core = { path = "../geozarr_core" }
bytemuck = "1.19.0"
duckdb = { version = "=1.10502.0", features = ["vtab"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
zarrs = { version = "0.16.4", default-features = false, features = ["blosc", "gzip", "crc32c", "zstd", "sharding", "transpose", "ndarray"] }
ureq = { version = "2", features = ["tls"] }
url = "2.5.0"

[dev-dependencies]
duckdb = { version = "=1.10502.0", features = ["bundled", "vtab", "buildtime_bindgen"] }
tempfile = "3.10"
criterion = "0.5"

[[bench]]
name = "coordinate_bench"
harness = false
