[package]
name = "eider-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "eider-mcp"
path = "src/main.rs"

[dependencies]
eider_session = { path = "../eider_session" }
duckdb = { version = "=1.10502.0", features = ["bundled"] }
color-eyre = "0.6"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
# rmcp + its async runtime added in Task 5
