[package]
name = "eider-mcp"
version = "0.1.0"
edition = "2021"

[lib]
name = "eider_mcp"
path = "src/lib.rs"

[[bin]]
name = "eider-mcp"
path = "src/main.rs"

[dependencies]
eider_session = { path = "../eider_session" }
duckdb = { version = "=1.10502.0", features = ["bundled"] }
color-eyre = "0.6"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
rmcp = { version = "=1.7.0", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
schemars = "=1.2.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "time", "process"] }
# The protocol smoke test drives the server with a real in-process MCP client.
rmcp = { version = "=1.7.0", features = ["client"] }
